--- a/client/src/components/Button/Button.scss
+++ b/client/src/components/Button/Button.scss
@@ -1,7 +1,7 @@
 @use 'sass/vars';
 
 .Button {
-  display: block;
+  display: inline-block;
   background-color: vars.$theme-secondary-light;
   box-shadow: 0 1px 1px 1px vars.$color-neutral-darker;
   border-radius: 1px;
